<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.nyasama.activity.PostListActivity">
    <item android:id="@+id/action_reply" android:title="@string/action_reply"
        android:icon="@drawable/ic_action_reply"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_moderate_thread" android:title="@string/action_moderate_thread"
        app:showAsAction="never" />
    <item android:id="@+id/action_quick_reply" android:title="@string/action_quick_reply"
        app:showAsAction="never" />
    <item android:id="@+id/action_reverse_order" android:title="@string/action_reverse_order"
        app:showAsAction="never" />
    <item android:id="@+id/action_see_author" android:title="@string/action_see_author"
        app:showAsAction="never" />
    <item android:id="@+id/action_mark_fav" android:title="@string/action_mark_fav"
        app:showAsAction="never" />
    <item android:id="@+id/action_goto_forum" android:title="@string/action_goto_forum"
        app:showAsAction="never" />
    <item android:id="@+id/action_share" android:title="@string/action_share"
        app:showAsAction="never" />
    <item android:id="@+id/action_my_profile" android:title="@string/action_my_profile"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
