<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_general">
        <ListPreference
            android:defaultValue="默认"
            android:dialogTitle="选择语言"
            android:entries="@array/language_preference"
            android:entryValues="@array/language_preference"
            android:key="language"
            android:summary="%s"
            android:title="@string/preference_language" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="animation"
            android:title="@string/preference_animation" />

        <ListPreference
            android:defaultValue="32MB"
            android:dialogTitle="@string/preference_cachesize"
            android:entries="@array/cache_size"
            android:entryValues="@array/cache_size"
            android:key="cachesize"
            android:summary="%s"
            android:title="@string/preference_cachesize" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_explore">
        <SwitchPreference
            android:defaultValue="true"
            android:key="isshowimage"
            android:title="@string/preference_thumbswitch"/>

        <ListPreference
            android:defaultValue="原图"
            android:dialogTitle="@string/preference_thumbsize"
            android:entries="@array/thumb_size"
            android:entryValues="@array/thumb_size"
            android:key="thumbsize"
            android:summary="%s"
            android:title="@string/preference_thumbsize" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_version">
        <Preference
            android:title="@string/version_value"/>
    </PreferenceCategory>

</PreferenceScreen>