<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_forum"
            android:title="@string/title_section1" />
        <item
            android:id="@+id/nav_pref"
            android:title="@string/title_section4" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/title_section5" />
    </group>

    <item android:title="=v=">
        <menu>
            <item
                android:id="@+id/nav_thb"
                android:title="@string/title_section2"
                android:icon="@mipmap/logo_thbwiki_round"/>
            <item
                android:id="@+id/nav_donate"
                android:title="THBDonate"
                android:icon="@mipmap/logo_thbdonate_round" />
            <item
                android:id="@+id/nav_nsdn"
                android:title="NSDN"
                android:icon="@mipmap/logo_nsdn_4_round" />
            <item
                android:id="@+id/nav_egg"
                android:title="@string/title_section3"
                android:icon="@drawable/logo_stg"/>
        </menu>
    </item>

</menu>
