<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nyasama.activity.NewPostActivity">
    <item
        android:id="@+id/action_add_smiles"
        android:icon="@android:drawable/ic_menu_gallery"
        android:showAsAction="never"
        android:title="@string/action_add_image" />
    <item
        android:id="@+id/action_add_image"
        android:icon="@android:drawable/ic_menu_upload"
        android:showAsAction="ifRoom"
        android:title="@string/action_add_image" />
    <item
        android:id="@+id/action_send"
        android:icon="@android:drawable/ic_menu_send"
        android:showAsAction="ifRoom"
        android:title="@string/action_post_now" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_my_profile"
        android:showAsAction="never"
        android:title="@string/action_my_profile" />
</menu>
