<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/ActivityPaddingBottom">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/ActivityPaddingTop"
                android:background="@color/ThemeColor" />

            <com.etsy.android.grid.StaggeredGridView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:column_count_landscape="4"
                app:column_count_portrait="2"
                app:item_margin="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/ActivityPaddingBottom" />
        </LinearLayout-->

        <com.etsy.android.grid.StaggeredGridView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!--android.support.v7.widget.RecyclerView
            android:columnWidth="128dp"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:footerDividersEnabled="false"
            android:id="@+id/list" /-->
    </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/list_empty"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_no_internet" />

        <Button
            android:id="@+id/reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_reload" />
    </LinearLayout>
</FrameLayout>
